fixed header desktop view and paragraph gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@
   position: absolute;
   content: "Rec";
   text-transform: uppercase;
-  font-family: var(--page-font-family, sans-serif);
+  font-family: var(--page-font-family, monospace);
   font-size: 18px;
   line-height: 1.389em;  /*=25px*/
   color: #ff0070;
@@ -92,7 +92,7 @@
 
 .header__theme-menu-button {
   color: var(--nav-text-color, #ff0070);
-  font-family: var(--page-font-family, sans-serif);
+  font-family: var(--page-font-family, monospace);
   text-transform: lowercase;
   font-size: 18px;
   padding: 1.5px 13px;
@@ -116,7 +116,7 @@
 }
 
 .header__title {
-  font-family: var(--page-font-family, sans-serif);
+  font-family: var(--page-font-family, monospace);
   font-weight: bold;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   color: var(--page-title-color, #db00ff);
@@ -125,7 +125,7 @@
 }
 
 .title__text {
-  font-family: var(--page-font-family, sans-serif);
+  font-family: var(--page-font-family, monospace);
   font-weight: bold;
   font-size: 18px;
   color: var(--content-title-color, #ff0070);
@@ -160,16 +160,13 @@ h4.title__text {
   gap: 20px;
 }
 
-.content_title {
-  margin-block-end: 10px;
-}
-
 .content-text {
-  font-family: var(--page-font-family, sans-serif);
+  font-family: var(--page-font-family, monospace);
   font-weight: normal;
   font-size: 18px;
   color: var(--main-text-color, #f1b2ce);
   line-height: 1.3em; /* =23.4px */
+  margin-block-start: 10px;
 }
 
 .link-decor {
@@ -203,6 +200,7 @@ h4.title__text {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  margin-block-start: 10px;
 }
 
 img {
@@ -224,7 +222,7 @@ img {
 }
 
 .footer__title {
-  font-family: var(--page-font-family, sans-serif);
+  font-family: var(--page-font-family, monospace);
   font-weight: bold;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   color: var(--page-title-color, #db00ff);
@@ -293,6 +291,7 @@ img {
   .gallery_container {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    margin-block-start: 20px;
   }
 
   .img-sunset {
@@ -332,10 +331,19 @@ img {
     grid-column: span 2;
     justify-self: center;
     align-self: start;
+    margin-inline-start: 20px;
   }
 
   .header__theme-menu-list {
     flex-direction: row;
+  }
+
+  header > .title__text {
+    margin-inline-start: 12px;
+  }
+
+  .line-break {
+    display: none;
   }
 
   .content {
